--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <button type="button" class="btn btn-outline-light btn-lg bttn"><i class="fa-brands fa-google-play"></i> Download</button>
     </div>
     <div class="col-lg-6">
-      <img src="images/iphone6.png" alt="iphone-mockup" class="dog">
+      <img src="iphone6.png" alt="iphone-mockup" class="dog">
     </div>
   </div>
 
@@ -90,13 +90,13 @@
       <div class="carousel-inner">
         <div class="carousel-item active testimonials-carou">
           <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img src="images/dog-img.jpg" alt="dog-profile" class="testimonials-images">
+          <img src="dog-img.jpg" alt="dog-profile" class="testimonials-images">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item testimonials-carou">
 
           <h2 >My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-          <img  src="images/lady-img.jpg" alt="lady-profile" class="testimonials-images">
+          <img  src="lady-img.jpg" alt="lady-profile" class="testimonials-images">
           <em>Beverly, Illinois</em>
         
          </div>
@@ -120,9 +120,9 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="sponsor" src="images/tnw.png" alt="tnw-logo">
-    <img class="sponsor" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="sponsor" src="images/mashable.png" alt="mashable-logo">
+    <img class="sponsor" src="tnw.png" alt="tnw-logo">
+    <img class="sponsor" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="sponsor" src="mashable.png" alt="mashable-logo">
 
   </section>
 
