--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>TinDog</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,7 +48,7 @@
       <button type="button" class="btn btn-outline-light btn-lg bttn"><i class="fa-brands fa-google-play"></i> Download</button>
     </div>
     <div class="col-lg-6">
-      <img src="images/iphone6.png" alt="iphone-mockup" class="dog">
+      <img src="iphone6.png" alt="iphone-mockup" class="dog">
     </div>
   </div>
 
@@ -90,13 +90,13 @@
       <div class="carousel-inner">
         <div class="carousel-item active testimonials-carou">
           <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img src="images/dog-img.jpg" alt="dog-profile" class="testimonials-images">
+          <img src="dog-img.jpg" alt="dog-profile" class="testimonials-images">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item testimonials-carou">
 
           <h2 >My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-          <img  src="images/lady-img.jpg" alt="lady-profile" class="testimonials-images">
+          <img  src="lady-img.jpg" alt="lady-profile" class="testimonials-images">
           <em>Beverly, Illinois</em>
         
          </div>
@@ -120,9 +120,9 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="sponsor" src="images/tnw.png" alt="tnw-logo">
+    <img class="sponsor" src="tnw.png" alt="tnw-logo">
     
-    <img class="sponsor" src="images/mashable.png" alt="mashable-logo">
+    <img class="sponsor" src="mashable.png" alt="mashable-logo">
 
   </section>
 
